--- a/Papka4/Papka3/Papka2/asd.html
+++ b/Papka4/Papka3/Papka2/asd.html
@@ -22,10 +22,10 @@
         Кубанского государственного
         университета">абсолютная гиперссылка на главную страницу сайта КубГУ  в протоколе https</a></li><br></li>
       <li>
-         <a href="Сказка.jpg"><img src="Сказка.jpg"></a></li><br></li>
+         <a href="Skazka.jpg"><img src="Skazka.jpg"></a></li><br></li>
     
 <li>
-  <a href="Папка 1/form.html">Сокращенная ссылка на внутреннюю страницу.</a></li><br></li>
+  <a href="Papka1/form.html">Сокращенная ссылка на внутреннюю страницу.</a></li><br></li>
 <li>
    <a href="asd.html">Сокращенная ссылка на главную страницу.</a></li><br></li>
 <li>
